[package]
name = "rampilo"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.2"
grammers-client = "0.4.0"
grammers-session = "0.4.0"
grammers-tl-types = "0.4.0"
inquire = "0.5.2"
log = "0.4.17"
pretty_env_logger = "0.4.0"
regex = "1.7.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.0", features = ["full"] }
